--- a/index.html
+++ b/index.html
@@ -1,49 +1,162 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+        <title>reveal.js</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/black.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+        <!-- Theme used for syntax highlighting of code -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+        <!-- Printing and PDF exports -->
+        <script>
+            var link = document.createElement('link')
+            link.rel = 'stylesheet'
+            link.type = 'text/css'
+            link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css'
+            document.getElementsByTagName('head')[0].appendChild(link)
+        </script>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+        <style>
+            .reveal section img {
+                border: none;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="reveal">
+            <div class="slides">
+                <section>
+                    <h1>Git</h1>
+                    <p>Versioning, done the right way</p>
+                </section>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
+                <section>
+                    <h3>Problem statement</h3>
+
+                    <p>One codebase, multiple developers</p>
+                </section>
+
+                <section>
+                    <section>
+                        <img src="https://git-scm.com/book/en/v2/images/basic-branching-1.png" alt="" class="stretch">
+
+                        <p class="fragment">$ git checkout -b iss53</p>
+
+                        <p class="fragment">
+                            $ git branch iss53 <br>
+                            $ git checkout iss53
+                        </p>
+                    </section>
+
+                    <section>
+                        <img src="https://git-scm.com/book/en/v2/images/basic-branching-2.png" alt="" class="stretch">
+
+                        <p class="fragment">
+                            $ vim index.html <br>
+                            $ git commit -a -m 'added a new footer [issue 53]'
+                        </p>
+                    </section>
+
+                    <section>
+                        <img src="https://git-scm.com/book/en/v2/images/basic-branching-3.png" alt="" class="stretch">
+                    </section>
+
+                    <section>
+                        <p>
+                            $ git checkout master <br>
+                            Switched to branch 'master'
+                        </p>
+
+                        <p class="fragment">
+                            $ git checkout -b hotfix <br>
+                            Switched to a new branch 'hotfix'
+                        </p>
+
+                        <p class="fragment">
+                            $ vim index.html <br>
+                            $ git commit -a -m 'fixed the broken email address'
+                        </p>
+                    </section>
+
+                    <section>
+                        <img src="https://git-scm.com/book/en/v2/images/basic-branching-4.png" alt="" class="stretch">
+
+                        <p class="fragment">
+                            $ git checkout master <br>
+                            $ git merge hotfix
+                        </p>
+                    </section>
+
+                    <section>
+                        <img src="https://git-scm.com/book/en/v2/images/basic-branching-5.png" alt="" class="stretch">
+
+                        <p class="fragment">
+                            $ git branch -d hotfix
+                        </p>
+                    </section>
+
+                    <section>
+                        <img src="https://git-scm.com/book/en/v2/images/basic-branching-6.png" alt="" class="stretch">
+                    </section>
+
+                    <section>
+                        <img src="https://git-scm.com/book/en/v2/images/basic-merging-2.png" alt="" class="stretch">
+                    </section>
+
+                    <section>
+                        <h3>Merge conflicts</h3>
+                    </section>
+
+                    <section>
+                        <ul>
+                            <li>Branch often</li>
+                            <li>One change per branch</li>
+                            <li>Do not share branches</li>
+                            <li>Short lived branches</li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        <h3>Git</h3>
+                        <ul>
+                            <li>Fast</li>
+                            <li>Enabling</li>
+                            <li>Easy</li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        Questions?
+                    </section>
+
+                </section>
+            </div>
+        </div>
+
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
+
+        <script>
+            // More info about config & dependencies:
+            // - https://github.com/hakimel/reveal.js#configuration
+            // - https://github.com/hakimel/reveal.js#dependencies
+            Reveal.initialize({
+                dependencies: [
+                    { src: 'plugin/markdown/marked.js' },
+                    { src: 'plugin/markdown/markdown.js' },
+                    { src: 'plugin/notes/notes.js', async: true },
+                    {
+                        src: 'plugin/highlight/highlight.js', async: true, callback: function () {
+                            hljs.initHighlightingOnLoad()
+                        }
+                    }
+                ]
+            })
+        </script>
+    </body>
 </html>
